--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ## Basic Configuration
 
-baseurl = "https://julionovoa.com"
+baseurl = "https://www.julionovoa.com"
 builddrafts = false
 canonifyurls = false
 languageCode = "en-US"
