--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ keywords = "blog, julionovoa, geospatial, gis, remote sensing, python, rstats"
 # github = "<username>"
 # instagram = "<username>"
 linkedin = "julionovoa"
-twitter = "JulioPNovoa"
+twitter = "jvlionovoa"
 # facebook = "<username>"
 # google = "<username>"
 # stackoverflow = "<username>"
